log
Fri 12 May 2023 06:11:32 PM UTC: 
 heap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:25:1: error: control reaches end of non-void function [-Werror=return-type]
   25 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
efc684c
Fri 12 May 2023 06:11:49 PM UTC: 
 heap.c | 0
 1 file changed, 0 insertions(+), 0 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:24:1: error: control reaches end of non-void function [-Werror=return-type]
   24 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
3d48eeb
Fri 12 May 2023 06:12:01 PM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:24:1: error: control reaches end of non-void function [-Werror=return-type]
   24 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
4f5dabe
Fri 12 May 2023 06:12:27 PM UTC: 
 heap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  1|3
total_score: 10/70
ce83b1f
